k8s/traefik.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/deployment.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: mirzaahilmi/traefik:1.0.2
          ports:
            - name: traefik
              containerPort: 1025
          volumeMounts:
            - mountPath: /run
              name: traefik
              readOnly: true
      volumes:
        - name: traefik
          secret:
            secretName: traefik
